fix: align content header

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ ul{
 section .row{
 
     margin-left: -1rem;
+    margin-right: -1rem;
 }
 
 
@@ -48,13 +49,12 @@ section .row{
 }
 
 .card{
-    padding: 1rem;
+    padding: 2rem;
     
-
 }
 
 
-.col{
+main .col{
     margin: 1rem;
  }
 
@@ -68,7 +68,7 @@ section .row{
 ***********/
 
 #header{
-    background-color: lghtblue;
+    background-color: lightblue;
     position: fixed;
     top: 0;
     right: 0;
@@ -78,7 +78,7 @@ section .row{
 
 
 header .container{
-    line-height: 3rem;
+    line-height: 2rem;
 
 }
 
@@ -107,7 +107,7 @@ header #icon{
 
 main::before{
     content: "";
-    padding-top: 3rem;
+    padding-top: 2rem;
     display: block;
 }
 
@@ -136,7 +136,7 @@ main> section{
 *  RESPONSIVE  *     small <576 - medium <768 - large <992
 ***************/
 
-/* Header */
+/* HEADER */
 
 @media screen and (max-width: 768px) {
     .col> ul{
@@ -146,5 +146,16 @@ main> section{
     header #icon{
         display: block;
     }
+}
+
+
+
+
+
+/* DEMO SECTION */
+
+@media screen and (max-width: 768px) {
+    
+    
 }
 
